--- a/themes/Adwaita/gtk-3.0/gnome-applications.css
+++ b/themes/Adwaita/gtk-3.0/gnome-applications.css
@@ -70,29 +70,10 @@ NautilusQueryEditor.info {
     background-color: @nautilus_cluebar_color;
     color: @theme_base_color;
 
-/*    border-width: 0;
-    border-style: solid; */
     border-color: shade(@nautilus_cluebar_color, 0.85);
 }
 
-NautilusTrashBar.info:backdrop,
-NautilusXContentBar.info:backdrop,
-NautilusSearchBar.info:backdrop,
-NautilusQueryEditor.info:backdrop {
-    border-color: @unfocused_theme_fg_color;
-/*    border-style: solid; */
-}
-
-/*NautilusTrashBar.info:backdrop:last-child,
-NautilusXContentBar.info:backdrop:last-child,
-NautilusSearchBar.info:backdrop:last-child,
-NautilusQueryEditor.info:backdrop:last-child {
-    border-bottom-width: 1;
-    border-style: solid;
-}*/
-
-/* Something broken here, need to investigate with Cosimo */
-/*.nautilus-cluebar-label {
+.nautilus-cluebar-label {
     font: bold;
     color: @theme_base_color;
     text-shadow: 0 1 alpha(black, 0.15);
@@ -100,39 +81,15 @@ NautilusQueryEditor.info:backdrop:last-child {
 
 .nautilus-cluebar-label:backdrop {
     font: bold;
-    color: @unfocused_theme_fg_color;
+    color: @theme_unfocused_fg_color;
     text-shadow: none;
-}*/
-
-/*
-NautilusTrashBar.info,
-NautilusXContentBar.info,
-NautilusSearchBar.info,
-NautilusQueryEditor.info {
-    background-color: @nautilus_cluebar_color;
-    border-color: darker (@nautilus_cluebar_color);
-
-    border-radius: 0;
-    border-width: 0 0 1 0;
-    border-style: solid;
 }
-*/
-
-/*
-NautilusTrashBar.info:first-child,
-NautilusXContentBar.info:first-child,
-NautilusSearchBar.info:first-child,
-NautilusQueryEditor.info:first-child {
-    border-width: 1 0;
-}*/
 
 /* This will make the location entry tall as buttons.
    Buttons are too tall btw, then it's ugly */
 /*NautilusLocationEntry.entry {
     -GtkEntry-inner-border: 9;
 }*/
-
-
 
 NautilusLocationEntry.entry {
     padding-left: 4;
