Widgets: toolbar button padding fix and some more Ephy tweaks.

--- a/themes/Adwaita/gtk-3.0/gnome-applications.css
+++ b/themes/Adwaita/gtk-3.0/gnome-applications.css
@@ -467,13 +467,14 @@ GeditStatusbar {
 
 /* epiphany */
 
-EphyToolbar.toolbar {
+/* EphyToolbar.toolbar {
     border-bottom: 1 solid @borders;
 }
 
 EphyToolbar.toolbar:backdrop {
     border-bottom: 1 solid @unfocused_borders;
 }
+*/
 
 EphyToolbar .entry,
 EphyToolbar .entry:focus,
