--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -1366,29 +1366,29 @@ GtkTreeMenu .menuitem * {
     color: @menu_fg_color;
 }
 
-.menuitem {
+.menu .menuitem {
     -GtkMenuItem-arrow-scaling: 0.4;
     padding: 4;
 }
 
-.menuitem.arrow {
-    color: @menu_controls_color;
+.menu .menuitem:hover {
+    border-radius: 0;
 }
 
-.menuitem:active,
-.menuitem *:active,
-.menuitem:hover,
-.menuitem *:hover {
+.menu .menuitem:active,
+.menu .menuitem *:active,
+.menu .menuitem:hover,
+.menu .menuitem *:hover {
     background-color: @theme_selected_bg_color;
     color: @theme_selected_fg_color;
 }
 
-.menuitem:insensitive,
-.menuitem *:insensitive {
+.menu .menuitem:insensitive,
+.menu .menuitem *:insensitive {
     color: mix (@menu_fg_color, @menu_bg_color, 0.6);
 }
 
-.menuitem .accelerator:insensitive {
+.menu .menuitem .accelerator:insensitive {
     color: mix (@menu_fg_color, @menu_bg_color, 0.7);
 }
 
@@ -1399,6 +1399,10 @@ GtkTreeMenu .menuitem * {
 .menuitem .accelerator:hover,
 .menuitem .accelerator:active {
     color: alpha (@menu_fg_color, 0.3);
+}
+
+.menuitem.arrow {
+    color: @menu_controls_color;
 }
 
 .menuitem.separator {
